[package]
name = "rawbytes"
version = "1.0.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "View/access any sized value as a &[u8]."
license = "MIT"
homepage = "https://github.com/jedisct1/rust-rawbytes"
repository = "https://github.com/jedisct1/rust-rawbytes"
categories = ["no-std"]
readme = "README.md"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
